--- a/FoodMunchwebsite.html
+++ b/FoodMunchwebsite.html
@@ -113,7 +113,7 @@
                                                 <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-ginger-fried-img.png" class="menu-image-iteam w-100"/>
                                                 <h1 class="card-heading-title">Non-Veg Starters</h1>
                                                 <a href="" class="menu-item-link">
-                                                      View All
+                                                      View All Clicks
                                                       <svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
                                                             <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
                                                       </svg>
