--- a/FoodMunchwebsite.html
+++ b/FoodMunchwebsite.html
@@ -330,10 +330,8 @@
 
                   </div>
             </div>
-            <script>
-            $(document).ready(function() {
-                  $('#loading').fadeOut(3000);
-            });
+            <script src="Js_File.js">
+           
             </script>
             
     </body>
