--- a/whychoose-us-section.html
+++ b/whychoose-us-section.html
@@ -18,7 +18,7 @@
                         <div class="col-12 col-md-4  mb-5">
                               <div class="wcu-card-session p-4" > 
                                     <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-serve.png"  class="wcu-food-image"/>
-                                    <h1 class="wcu-card-heading pt-3">Food Service</h1>
+                                    <h1 class="wcu-card-heading pt-3">Food </h1>
                                     <p class="wcu-card-description pt-3">Lorem Ipsum is simply dummy text of the printing 
                                        and typesetting industry. Lorem Ipsum has been
                                        the industry's standard dummy text ever since 
