--- a/FoodMunchwebsite.html
+++ b/FoodMunchwebsite.html
@@ -29,7 +29,7 @@
                   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                   <div class="navbar-nav ml-auto">
                   <a class="nav-link active" id="navlink-cutom-color1" href="#wcu-section-id"> Why Choose Us? <span class="sr-only">(current)</span></a>
-                  <a class="nav-link " id="navlink-cutom-color2" href="#explore-menu-id">Explore Menu</a>
+                  <a class="nav-link " id="navlink-cutom-color2" href="#explore-menu-id"> Menu</a>
                   <a class="nav-link " id="navlink-cutom-color3" href="#delivery-payment-id">Delivery Payment</a>
                   <a class="nav-link " id="navlink-cutom-color4" href="#follow-us-id">Follow Us</a>
                   </div>
